--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
+asgiref==3.9.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
+cloudinary==1.44.1
 Django==4.2.5
+django-cloudinary-storage==0.3.0
 django-environ==0.11.2
+gunicorn==21.2.0
+idna==3.10
+packaging==25.0
+pillow==11.3.0
 psycopg==3.1.12
-gunicorn>=21.2,<22.0
+requests==2.32.4
+six==1.17.0
+sqlparse==0.5.3
+typing_extensions==4.14.1
+urllib3==2.5.0
