--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ certifi==2025.6.15
 charset-normalizer==3.4.2
 cloudinary==1.44.1
 Django==4.2.5
+django-basicauth==0.5.3
 django-cloudinary-storage==0.3.0
 django-environ==0.11.2
+django-widget-tweaks==1.5.0
 gunicorn==21.2.0
 idna==3.10
 packaging==25.0
